Changed the color of the site font to be darker to help with readability. I also fixed a few issues that came about from the last update

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@ body{
     max-width: 100vw;
     height: auto;
     background: black;
-    /* background: linear-gradient(93deg, #5AB9EA,  #8860D0); */
     overflow-x: hidden; 
     z-index: -2;
 }
@@ -28,8 +27,8 @@ body{
     font-size: 16px;
     font-family: 'Lato', 'Trebuchet', 'Verdana', 'Tahoma',
     'Arial Narrow', 'Helvetica', 'Geneva', sans-serif;
-    /* font-family: 'Josefin Sans', sans-serif; */
-    color: #9e9e9e;
+    /* color: #9e9e9e; */
+    color: #777;
 }
 
 a{
@@ -65,9 +64,9 @@ p{
 }
 
 h1{
-    font-size: 1.5rem !important;
     text-align: center;
 }
+
 
 /* @font-face {
     font-family: 'Kust Regular';
@@ -359,6 +358,7 @@ h1{
     box-shadow: -38px 0 43px rgba(0,0,0,0.14);
 }
 
+
 #pg-content{
    min-height: 250em;
    width: 84%;
@@ -368,6 +368,14 @@ h1{
    background: #fff;
    overflow: hidden;
    /* box-shadow: 0 38px 43px rgba(0,0,0,.09); */
+}
+
+#pg-content h1{
+    font-size: 1.5rem;
+}
+
+#pg-content h1, h2, h3, h4, h5, h6{
+    color: #9e9e9e;
 }
 
 .main-section{
